finish with task + allure